# DaCL

./: .gitignore  CMakeLists.txt  DaCL  Doxyfile  LICENSE  Makefile  ManualTrigger.h  README.md  StorageManager.cpp  VideoCapture.cpp  VideoOverlay.cpp  dacl  lab_car_video_system  main.cpp  requirements.txt  setup.py
DaCL/: CANBusListener.cpp  CANBusListener.h  CircularBuffer.cpp  CircularBuffer.h  Makefile  ManualTrigger.cpp  StorageManager.cpp  StorageManager.h  VideoCapture.cpp  VideoCapture.h  VideoOverlay.cpp  VideoOverlay.h  main.cpp
configs/: config.ini
doc/: INSTALL.md
include/: can_bus.hpp  circular_buffer.hpp  main_app.hpp  manual_trigger.hpp  overlay.hpp  storage.hpp  video_capture.hpp
lab_car_video_system/: __init__.py  can_bus.py  config.py  main.py  manual_trigger.py  overlay.py  storage.py  storage_manager.py  utils.py  video_capture.py
lab_car_video_system/config/: config.ini
logs/: events.csv  sample_events.csv
scripts/: setup.sh
src/: CANListener.cpp  CANListener.hpp  CSVLogger.cpp  CSVLogger.hpp  FileManager.cpp  FileManager.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  PreviewManager.cpp  PreviewManager.hpp  StorageManager.cpp  StorageManager.hpp  TriggerManager.cpp  TriggerManager.hpp  VideoRecorder.cpp  VideoRecorder.hpp  can_bus.cpp  circular_buffer.cpp  main.cpp  main_app.cpp  manual_trigger.cpp  overlay.cpp  storage.cpp  utils.cpp  utils.hpp  video_capture.cpp
tests/: test_system.py
